--- a/Dashbourd.html
+++ b/Dashbourd.html
@@ -87,7 +87,7 @@
             <section class="search-and-user">
            
             
-                <h1>Даалгавар</h1>
+                <h1>Хянах самбар</h1>
                 <div class="admin-profile">
                   <div class="search-container">
                   <form action="/action_page.php">
