--- a/menu.html
+++ b/menu.html
@@ -120,7 +120,7 @@
                 </button>
                 
                 <div class="dropdown-container">
-                  <a href="#">
+                  <a href="project.html">
                     <div>
                       <div class="project-card">
                         <div>
