--- a/home.html
+++ b/home.html
@@ -11,12 +11,11 @@
 <div class="topnav">
   <a href="#">Link</a>
   <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a class="login-btn" href="#">Link</a>
 </div>
 
 <div class="content">
-  <h2>CSS Template</h2>
-  <p>A topnav, content and a footer.</p>
+  <!-- end ymaa hiine  -->
 </div>
 
 <div class="footer">
