--- a/home.html
+++ b/home.html
@@ -1,26 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>CSS Template</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="home.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+          href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
+          rel="stylesheet"
+        />
+        
+        <link
+          rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+          integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+          crossorigin="anonymous"
+        />
+        
+        <title>wework</title>
+        <link rel="stylesheet" href="home.css" />
+      </head>
 <body>
+  <div class="wrapper">
+    <nav class="desktop-nav">
+        <div class="logo">
+          <img src="logo.png" alt="logo"/>
+          <h1>We Work</h1>
+        </div>
 
-<div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a class="login-btn" href="#">Link</a>
-</div>
+        <ul>
+         <li> 
+           <a href="#">Бидний тухай</a> 
+        </li>
+          <li>
+            <a href="#">Санал гомдол</a>
+          </li>
+          <li>
+            <a href="#" class="btn">Нэвтрэх</a>
+          </li>
+        </ul>
+      </nav>
 
-<div class="content">
-  <!-- end ymaa hiine  -->
-</div>
+     <header class="hero-container">
+       <div class="left">
+         <h1 class="heading"></h1>
+         <p>See plans, check progress, and discuss work in one place.
+          With WeWork as your work manager, you’ll stay on top of everything the team’s doing.</p>
+       </div>
+       <div class="right">
+        <img src="home.png" alt=""/>
+       </div>
+     </header>
 
-<div class="footer">
-  <p>Footer</p>
-</div>
-
+    </div>
 </body>
 </html>
