--- a/login.html
+++ b/login.html
@@ -49,10 +49,11 @@
         <input class="button" type="submit" value="Нэвтрэх" />
       </form>
       <p>эсвэл</p>
-      <div class="google">
+      <a href=""><div class="google">
         <img  src="/public/images/google.png" alt="google" />
         <p>Log in with google</p>
-      </div>
+      </div></a>
+      
      <div class="register">
       <a href="register.html">Шинээр бүртгүүлэх</a>
      </div>
