--- a/project.html
+++ b/project.html
@@ -119,7 +119,7 @@
                   <li><a href="overview.html"> Ерөнхий</a></li>
                   <li><a href="">Самбар</a></li>
                   <li><a href="">Он сар</a> </li>
-                  <li><a href="">Хянах самбар</a> </li>
+                  <li><a href="pro-dashboard.html">Хянах самбар</a> </li>
                 </ul>
             </div>
 
