--- a/register.html
+++ b/register.html
@@ -66,10 +66,12 @@
         <input class="button" type="submit" value="Нэвтрэх" />
       </form>
       <p>эсвэл</p>
-      <div class="google">
+      <a href="">
+        <div class="google">
         <img  src="/public/images/google.png" alt="google" />
         <p>Log in with google</p>
-      </div>
+      </div></a>
+    
      <div class="register">
       <a href="login.html">НЭВТРЭХ</a>
      </div>
