--- a/message.html
+++ b/message.html
@@ -13,7 +13,7 @@
       <header class="page-header" id="MenuBar">
         <nav>
           <a href="menu.html" aria-label="forecastr logo" class="logo">
-           <img src="public/images/klipartz.com.png" width="140" height="38" alt="">
+           <img src="public/images/logo.png" width="140" height="38" alt="">
           </a>
           <ul class="admin-menu">
             <li>
@@ -185,6 +185,9 @@
                   <div class="messageName">
                      <p>Түвшин</p>
                      <div class="messageDet">
+                       <a href="">
+                         
+                       </a>
                       <div class="card-level easy">
                         <p>Энгийн</p>
                     </div>
