--- a/menu.html
+++ b/menu.html
@@ -178,7 +178,7 @@
            
             </article>
           </section>
-          <section id="id01" class="modal">
+          <section id="id01" class="modal animate">
             <div class="modal-overlay"></div>
             <div class="modal-container">
               <h1>Шинэ төсөл үүсгэх</h1>
